--- a/a2rms/templates/attendanceReport.html
+++ b/a2rms/templates/attendanceReport.html
@@ -29,13 +29,12 @@
         </div>
         <div class="logo">
             <img src="../static/images/logo/logo.svg">
-
             <span>/</span>
             <img src="../static/images/logo/custom.png" alt="">
         </div>
         <ul>
             <li>
-                <a href="./dashboard.html" class="active">
+                <a href="./dashboard" class="active">
                     <img src="../static/images/icons/icona_1.svg" alt="">
                     <span>Dashboard</span>
 
@@ -44,15 +43,15 @@
             </li>
             <li>
                 <a class="sub-btn">
-                    <img src="../static/images/icons/icona_2.svg"  alt="">
+                    <img src="../static/images/icons/icona_2.svg" alt="">
                     <span>Attendance</span>
                     <i class="fa-solid fa-angle-down dropdown1"></i>
 
 
                 </a>
                 <ul class="sub-menu">
-                    <li><a href="./markAttendance.html">Mark Attendance</a></li>
-                    <li><a href="./attendanceReport.html">Attendance Report</a></li> 
+                    <li><a href="./markAttendance">Mark Attendance</a></li>
+                    <li><a href="./attendanceReport">Attendance Report</a></li> 
                 </ul>
             </li>
             <li>
@@ -63,13 +62,13 @@
 
                 </a>
                 <ul class="sub-menu">
-                    <li><a href="./leaveApplications.html">Apply Leave</a></li>
-                    <li><a href="./Leavebalance.html">Leave Balance </a></li>
-                    <li><a href="./leaveReport.html">Leave Reports</a></li> 
+                    <li><a href="./leaveApplications">Apply Leave</a></li>
+                    <li><a href="./Leavebalance">Leave Balance </a></li>
+                    <li><a href="./leaveReport">Leave Reports</a></li> 
                 </ul>
             </li>
             <li>
-                <a class="sub-btn" href="./holidays.html">
+                <a class="sub-btn" href="./holidays">
                     <img src="../static/images/icons/icona_4.svg" alt="">
                     <span>Holidays Calendar</span> 
 
@@ -77,7 +76,7 @@
                  
             </li>
             <li>
-                <a class="sub-btn" href="./Noticeboard.html">
+                <a class="sub-btn" href="./Noticeboard">
                     <img src="../static/images/icons/icona_2.svg" alt="">
                     <span>Noticeboard</span> 
 
@@ -85,7 +84,7 @@
                 
             </li>
             <li>
-                <a class="sub-btn" href="./awards.html">
+                <a class="sub-btn" href="./awards">
                     <img src="../static/images/icons/icona_5.svg" alt="">
                     <span>Awards</span> 
                 </a>
@@ -98,8 +97,8 @@
                     <i class="fa-solid fa-angle-down dropdown1"></i>
                 </a>
                 <ul class="sub-menu">
-                      <li><a href="./profile.html">Profile </a></li>
-                    <li><a href="./changepassword.html">Change Password</a></li> 
+                      <li><a href="./profile">Profile </a></li>
+                    <li><a href="./changepassword">Change Password</a></li> 
                 </ul>
             </li>
             <li>
