--- a/a2rms/templates/leaveReport.html
+++ b/a2rms/templates/leaveReport.html
@@ -24,20 +24,20 @@
     <!-------------------------------- Sidebar ------------------------------------>
     <aside>
         <div class="aside_btn d-lg-flex d-none">
-            <img src="./assets/images/icons/ham.svg" alt="">
+            <img src="../static/images/icons/ham.svg" alt="Hamburger Menu">
         </div>
         <div class="close-full d-lg-none d-flex">
             <i class="fa-solid fa-xmark"></i>
         </div>
         <div class="logo">
-            <img src="./assets/images/logo/logo.svg" alt="">
+            <img src="../static/images/logo/logo.svg">
             <span>/</span>
-            <img src="./assets/images/logo/custom.png" alt="">
+            <img src="../static/images/logo/custom.png" alt="">
         </div>
         <ul>
             <li>
-                <a href="./dashboard.html" class="active">
-                    <img src="./assets/images/icons/icona_1.svg" alt="">
+                <a href="./dashboard" class="active">
+                    <img src="../static/images/icons/icona_1.svg" alt="">
                     <span>Dashboard</span>
 
                 </a>
@@ -45,67 +45,67 @@
             </li>
             <li>
                 <a class="sub-btn">
-                    <img src="./assets/images/icons/icona_2.svg" alt="">
+                    <img src="../static/images/icons/icona_2.svg" alt="">
                     <span>Attendance</span>
                     <i class="fa-solid fa-angle-down dropdown1"></i>
 
 
                 </a>
                 <ul class="sub-menu">
-                    <li><a href="./markAttendance.html">Mark Attendance</a></li>
-                    <li><a href="./attendanceReport.html">Attendance Report</a></li> 
+                    <li><a href="./markAttendance">Mark Attendance</a></li>
+                    <li><a href="./attendanceReport">Attendance Report</a></li> 
                 </ul>
             </li>
             <li>
                 <a class="sub-btn">
-                    <img src="./assets/images/icons/icona_3.svg" alt="">
+                    <img src="../static/images/icons/icona_3.svg" alt="">
                     <span>Leaves</span>
                     <i class="fa-solid fa-angle-down dropdown1"></i>
 
                 </a>
                 <ul class="sub-menu">
-                    <li><a href="./leaveApplications.html">Apply Leave</a></li>
-                    <li><a href="./Leavebalance.html">Leave Balance </a></li>
-                    <li><a href="./leaveReport.html">Leave Reports</a></li> 
+                    <li><a href="./leaveApplications">Apply Leave</a></li>
+                    <li><a href="./Leavebalance">Leave Balance </a></li>
+                    <li><a href="./leaveReport">Leave Reports</a></li> 
                 </ul>
             </li>
             <li>
-                <a class="sub-btn" href="./holidays.html">
-                    <img src="./assets/images/icons/icona_4.svg" alt="">
+                <a class="sub-btn" href="./holidays">
+                    <img src="../static/images/icons/icona_4.svg" alt="">
                     <span>Holidays Calendar</span> 
 
                 </a>
                  
             </li>
             <li>
-                <a class="sub-btn" href="./Noticeboard.html">
-                    <img src="./assets/images/icons/icona_2.svg" alt="">
+                <a class="sub-btn" href="./Noticeboard">
+                    <img src="../static/images/icons/icona_2.svg" alt="">
                     <span>Noticeboard</span> 
 
                 </a>
                 
             </li>
             <li>
-                <a class="sub-btn" href="./awards.html">
-                    <img src="./assets/images/icons/icona_5.svg" alt="">
+                <a class="sub-btn" href="./awards">
+                    <img src="../static/images/icons/icona_5.svg" alt="">
                     <span>Awards</span> 
                 </a>
                
             </li>
             <li>
                 <a class="sub-btn">
-                    <img src="./assets/images/icons/icona_6.svg" alt="">
+                    <img src="../static/images/icons/icona_6.svg" alt="">
                     <span>Account Settings</span>
                     <i class="fa-solid fa-angle-down dropdown1"></i>
                 </a>
                 <ul class="sub-menu">
-                      <li><a href="./profile.html">Profile </a></li>
-                    <li><a href="./changepassword.html">Change Password</a></li> 
+                      <li><a href="./profile">Profile </a></li>
+                    <li><a href="./changepassword">Change Password</a></li> 
                 </ul>
             </li>
             <li>
                 <a class="sub-btn">
-                    <img src="./assets/images/icons/icona_7.svg" alt="">
+                    <img src="../static/images/icons/icona_7.svg" alt="">
                     <span>Logout</span>
 
                 </a>
