--- a/a2rms/templates/balanceReport.html
+++ b/a2rms/templates/balanceReport.html
@@ -36,7 +36,7 @@
         </div>
         <ul>
             <li>
-                <a href="./dashboard.html" class="active">
+                <a href="./dashboard" class="active">
                     <img src="../static/images/icons/icona_1.svg" alt="">
                     <span>Dashboard</span>
 
@@ -52,8 +52,8 @@
 
                 </a>
                 <ul class="sub-menu">
-                    <li><a href="./markAttendance.html">Mark Attendance</a></li>
-                    <li><a href="./attendanceReport.html">Attendance Report</a></li> 
+                    <li><a href="./markAttendance">Mark Attendance</a></li>
+                    <li><a href="./attendanceReport">Attendance Report</a></li> 
                 </ul>
             </li>
             <li>
@@ -64,13 +64,13 @@
 
                 </a>
                 <ul class="sub-menu">
-                    <li><a href="./leaveApplications.html">Apply Leave</a></li>
-                    <li><a href="./Leavebalance.html">Leave Balance </a></li>
-                    <li><a href="./leaveReport.html">Leave Reports</a></li> 
+                    <li><a href="./leaveApplications">Apply Leave</a></li>
+                    <li><a href="./Leavebalance">Leave Balance </a></li>
+                    <li><a href="./leaveReport">Leave Reports</a></li> 
                 </ul>
             </li>
             <li>
-                <a class="sub-btn" href="./holidays.html">
+                <a class="sub-btn" href="./holidays">
                     <img src="../static/images/icons/icona_4.svg" alt="">
                     <span>Holidays Calendar</span> 
 
@@ -78,7 +78,7 @@
                  
             </li>
             <li>
-                <a class="sub-btn" href="./Noticeboard.html">
+                <a class="sub-btn" href="./Noticeboard">
                     <img src="../static/images/icons/icona_2.svg" alt="">
                     <span>Noticeboard</span> 
 
@@ -86,7 +86,7 @@
                 
             </li>
             <li>
-                <a class="sub-btn" href="./awards.html">
+                <a class="sub-btn" href="./awards">
                     <img src="../static/images/icons/icona_5.svg" alt="">
                     <span>Awards</span> 
                 </a>
@@ -99,8 +99,8 @@
                     <i class="fa-solid fa-angle-down dropdown1"></i>
                 </a>
                 <ul class="sub-menu">
-                      <li><a href="./profile.html">Profile </a></li>
-                    <li><a href="./changepassword.html">Change Password</a></li> 
+                      <li><a href="./profile">Profile </a></li>
+                    <li><a href="./changepassword">Change Password</a></li> 
                 </ul>
             </li>
             <li>
