--- a/a2rms/templates/dashboard.html
+++ b/a2rms/templates/dashboard.html
@@ -40,7 +40,7 @@
         </div>
         <ul>
             <li>
-                <a href="./dashboard.html" class="active">
+                <a href="./dashboard" class="active">
                     <img src="../static/images/icons/icona_1.svg" alt="">
                     <span>Dashboard</span>
 
@@ -56,25 +56,25 @@
 
                 </a>
                 <ul class="sub-menu">
-                    <li><a href="./markAttendance.html">Mark Attendance</a></li>
-                    <li><a href="./attendanceReport.html">Attendance Report</a></li> 
+                    <li><a href="./markAttendance">Mark Attendance</a></li>
+                    <li><a href="./attendanceReport">Attendance Report</a></li> 
                 </ul>
             </li>
             <li>
                 <a class="sub-btn">
-                    <img src="../static/images/icons/icona_2.svg" alt="">
+                    <img src="../static/images/icons/icona_3.svg" alt="">
                     <span>Leaves</span>
                     <i class="fa-solid fa-angle-down dropdown1"></i>
 
                 </a>
                 <ul class="sub-menu">
-                    <li><a href="./leaveApplications.html">Apply Leave</a></li>
-                    <li><a href="./Leavebalance.html">Leave Balance </a></li>
-                    <li><a href="./leaveReport.html">Leave Reports</a></li> 
+                    <li><a href="./leaveApplications">Apply Leave</a></li>
+                    <li><a href="./Leavebalance">Leave Balance </a></li>
+                    <li><a href="./leaveReport">Leave Reports</a></li> 
                 </ul>
             </li>
             <li>
-                <a class="sub-btn" href="./holidays.html">
+                <a class="sub-btn" href="./holidays">
                     <img src="../static/images/icons/icona_4.svg" alt="">
                     <span>Holidays Calendar</span> 
 
@@ -82,7 +82,7 @@
                  
             </li>
             <li>
-                <a class="sub-btn" href="./Noticeboard.html">
+                <a class="sub-btn" href="./Noticeboard">
                     <img src="../static/images/icons/icona_2.svg" alt="">
                     <span>Noticeboard</span> 
 
@@ -90,7 +90,7 @@
                 
             </li>
             <li>
-                <a class="sub-btn" href="./awards.html">
+                <a class="sub-btn" href="./awards">
                     <img src="../static/images/icons/icona_5.svg" alt="">
                     <span>Awards</span> 
                 </a>
@@ -103,8 +103,8 @@
                     <i class="fa-solid fa-angle-down dropdown1"></i>
                 </a>
                 <ul class="sub-menu">
-                      <li><a href="./profile.html">Profile </a></li>
-                    <li><a href="./changepassword.html">Change Password</a></li> 
+                      <li><a href="./profile">Profile </a></li>
+                    <li><a href="./changepassword">Change Password</a></li> 
                 </ul>
             </li>
             <li>
