--- a/a2rms/templates/awards.html
+++ b/a2rms/templates/awards.html
@@ -239,6 +239,9 @@
    <script type="text/javascript" src="../static/js/dataTables.responsive.min.js"></script>
    <script type="text/javascript" src="../static/js/responsive.bootstrap5.min.js"></script>
    <script>
+    console.log("hello script is working")
+   </script>
+   <script>
        $(document).ready(function () {
            $('#example').DataTable();
        });
