--- a/a2rms/templates/attendanceReport.html
+++ b/a2rms/templates/attendanceReport.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script src="../static//js/jquery.min.js"></script>
-        <script src="../static//js/jquery-migrate.js"></script>
+        <script src="../static/js/jquery.min.js"></script>
+        <script src="../static/js/jquery-migrate.js"></script>
 
 
 </head>
@@ -34,7 +34,7 @@
         </div>
         <ul>
             <li>
-                <a href="./dashboard" class="active">
+                <a href="./dashboard" class="active">   
                     <img src="../static/images/icons/icona_1.svg" alt="">
                     <span>Dashboard</span>
 
@@ -434,7 +434,7 @@
                                     Week Off 
                                 </li>
                                 <li>
-                                    <span class="a_h">H</span>
+                                    <span class="a_h">H</span>  
                                     Holiday 
                                 </li>
                                 <li>
