--- a/a2rms/templates/balanceReport.html
+++ b/a2rms/templates/balanceReport.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script src="../static//js/jquery.min.js"></script>
-        <script src="../static//js/jquery-migrate.js"></script>
+        <script src="../static/js/jquery.min.js"></script>
+        <script src="../static/js/jquery-migrate.js"></script>
 
 
 </head>
@@ -45,6 +45,7 @@
             </li>
             <li>
                 <a class="sub-btn">
+                        
                     <img src="../static/images/icons/icona_2.svg" alt="">
                     <span>Attendance</span>
                     <i class="fa-solid fa-angle-down dropdown1"></i>
